# hellocmake

./: CMakeLists.txt  CMakePresets.json  README.md
hellocmakelib/: CMakeLists.txt
hellocmakelib/include/hellocmakelib/: hellocmake.h  hellocmakemacros.h
hellocmakelib/src/: hellocmake.cpp
hellocmakelibtest/: CMakeLists.txt
hellocmakelibtest/src/: main.cpp
src/: main.cpp
